Revision history for Perl extension Params::CallbackRequest.

1.18
      - Updated POD test to take advantage of Test::Pod 1.20 or later.

1.17  2007-03-27T16:21:34
      - Updated copyright date.
      - Now requiring (rather than recommending) Class::ISA and
        Attribute::Handlers, since the module requires Perl 5.6 or later
        anyway, and virtually no one will want to use the module without these
        modules. Test failure report from David Cantrell.

1.16  2007-03-26T21:25:17
      - Fixed a bug detecting mod_perl2. Reported by Jimmy Li.
      - Fixed a bug in the redirect() method under mod_perl2. Report and fix
        from Jimmy Li.
      - Added the "configure_requires" parameter to Build.PL and added
        Test::Pod to the "recommends" parameter.

1.15  2006-05-26T21:28:55
      - Added the 'requester' attribute to Params::Callback. This can be
        specified by passing the 'requester' parameter to request(), and can
        be anything.

1.14  2006-03-02T20:07:28
      - Removed an unnecessary eval block around the loading of Class::ISA
        and Attribute::Handlers that would prevent the failure of either of
        those modules to load to propagate.
      - Fixed typo in the Synopsis spotted by Scott Lanning.
      - Added support for mod_perl2, as well as mod_perl 1 and mod_perl 1.99.

1.13  2004-04-20T18:29:37
      - Apache 2 compatability added thanks to Fred Moyer.

1.12  2004-03-15T15:27:54
      - No longer using a Params::Validate callback to transform a value,
        since that's not a supported feature of Params::Validate and it led
        to problems on some platforms.

1.11  Wed Oct  8 19:27:32 2003
      - Fixed execution of pre and post callbacks so that they execute in the
        order in which they're declared. Thanks to Perl 5.8.1 for rubbing my
        nose in this one!

1.10  Mon Sep  8 21:15:42 2003
      - Code moved over from MasonX::ApacheHandler::WithCallbacks, which is